--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +62,7 @@
     "Remove the evaporator fan cover, which will be found inside the freezer compartment.\n",
     "Inspect the grommet to see if it has fallen off, or it if is showing signs of wear or damage..\n",
     "If any of the above are true, you will need a replacement evaporator fan motor grommet.\"\"\"\n",
+    "\n",
     "title2 = \"How To Fix Leaking Refrigerator\"\n",
     "title2_1 = \"Door Gaskets Or Seals\"\n",
     "content2_1 = \"\"\"Door gaskets or seals are found along the outside of the refrigerator’s doors. They are normally made from a vinyl material and will typically have a flexible magnetic strip inside to adhere to the cabinet when the door is closed to create an airtight seal. If there is moisture along the edge of the door then inspect the gaskets for distortion or damage. Air leakage through a defective gasket will create excessive moisture in the refrigerator, possibly resulting in defrost issues and potential water leaks.\n",
@@ -536,7 +537,7 @@
     "If you receive a different reading, you will need a replacement door latch assembly.\n",
     "\"\"\"\n",
     "\n",
-    "title15 = \"Timer Or Electronic Control\"\n",
+    "title15_2 = \"Timer Or Electronic Control\"\n",
     "content15_2 = \"\"\"If you have determined that the door latch assembly is operating properly and your dishwasher still won’t start, the next step would be to look at the timer or electronic control. The first step of the dishwasher cycle is normally a drain function to remove any standing water in the tub. If you do not hear the drain pump motor running, then you should look at the timer or electronic control as a possible cause. On manual timer models, the timer is used to supply power to the pump motor, water inlet valve, heater circuit and drain pump motor at the proper sequence in the cycle. The timer uses a series of electrical contacts that are driven by a small motor all of which are encased in the timer housing.\n",
     "How to test a dishwasher timer with a multimeter:\n",
     "Disconnect your appliance from the power source.\n",
@@ -871,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,57 +1374,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs = []\n",
+    "for i in range(100,133):\n",
+    "    docs.append(locals()['title'+str(i)]+':\\n'+locals()['content'+str(i)])\n",
+    "\n",
+    "for i in range(1,22):\n",
+    "    newDoc = locals()['title'+str(i)]\n",
+    "    j = 0\n",
+    "    while ('title'+str(i)+'_'+str(j)) in locals():\n",
+    "        newDoc += '\\n' + locals()[('title'+str(i)+'_'+str(j))]\n",
+    "        newDoc += '\\n' + locals()[('content'+str(i)+'_'+str(j))]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'__name__': '__main__',\n",
-       " '__doc__': 'Automatically created module for IPython interactive environment',\n",
-       " '__package__': None,\n",
-       " '__loader__': None,\n",
-       " '__spec__': None,\n",
-       " '__builtin__': <module 'builtins' (built-in)>,\n",
-       " '__builtins__': <module 'builtins' (built-in)>,\n",
-       " '_ih': ['',\n",
-       "  'title1 = \"How To Fix A Refrigerator That\\'s Not Making Ice\"\\ntitle1_1 = \"Water Fill Tubes\"\\ncontent1_1 = \"\"\"Inspect the ice maker mold to see if there are ice cubes present. If there are no cubes or very small cubes, then you should look for issues with the water fill system.\\nHow to inspect your refrigerator’s water fill tubes:\\nBefore beginning, disconnect both the power and water source from your refrigerator.\\nAt the back of the icemaker, inspect the fill tube and the fill cup area at the back of the ice maker to make sure that they are not frozen. If there is an ice buildup in that area, confirm no foreign objects have disrupted the flow of water into the fill cup.\\nInspect the outlet tubing from the fill valve to the ice maker fill tube for any signs of restrictions.\\nIf you find any issues while performing the checks above, you will need replacement water fill tubes.\"\"\"\\ntitle1_2 = \"\"\"Water Inlet Valve\"\"\"\\ncontent1_2 = \"\"\"Some water inlet valves may have a screen to filter debris before it can enter the valve. If the screen is plugged, water flow will be restricted, and the result will be small or layered ice cubes. Remove and clean the screen if it is clogged. If dirt has gotten into the valve it may not shut off completely and will continuously drip water into the ice maker fill tube and will eventually freeze up. Low household water pressure or a restriction at the manual shut off valve will also cause the water inlet valve to not shut off completely and create this same condition. Self piercing saddle valves are the most common shut off valve to cause this problem as the hole that is pierced in the water line is often too small and will more easily become restricted.\\nHow to check the water inlet valve in a refrigerator with a multi-meter:\\nDisconnect your appliance from the power and water source before beginning.\\nRemove the rear access panel and locate your water inlet valve, it is usually found near the bottom.\\nBefore removing the inlet valve, look for any signs of leaks or loose connectors in the valve inlet supply. If no issues are found, inspect the valve body for any cracks or damage.\\nInspect the outlet tubing for any brittle tubing, abrasions, cracks, or any other damage.\\nIf you do not locate any leaks, disconnect the water inlet valve and remove it from the refrigerator to test it\\nSet your multi-meter to the Rx1 setting and touch the terminals with the probes. You are testing for continuity and should receive a reading of 200 to 500 ohms.\\nIf you receive any other reading, you need a replacement water inlet valve\"\"\"\\ntitle1_3 = \"Ice & Water Filter\"',\n",
-       "  'locals()'],\n",
-       " '_oh': {},\n",
-       " '_dh': [PosixPath('/Users/kaimengzhu/projects/findParts'),\n",
-       "  PosixPath('/Users/kaimengzhu/projects/findParts')],\n",
-       " 'In': ['',\n",
-       "  'title1 = \"How To Fix A Refrigerator That\\'s Not Making Ice\"\\ntitle1_1 = \"Water Fill Tubes\"\\ncontent1_1 = \"\"\"Inspect the ice maker mold to see if there are ice cubes present. If there are no cubes or very small cubes, then you should look for issues with the water fill system.\\nHow to inspect your refrigerator’s water fill tubes:\\nBefore beginning, disconnect both the power and water source from your refrigerator.\\nAt the back of the icemaker, inspect the fill tube and the fill cup area at the back of the ice maker to make sure that they are not frozen. If there is an ice buildup in that area, confirm no foreign objects have disrupted the flow of water into the fill cup.\\nInspect the outlet tubing from the fill valve to the ice maker fill tube for any signs of restrictions.\\nIf you find any issues while performing the checks above, you will need replacement water fill tubes.\"\"\"\\ntitle1_2 = \"\"\"Water Inlet Valve\"\"\"\\ncontent1_2 = \"\"\"Some water inlet valves may have a screen to filter debris before it can enter the valve. If the screen is plugged, water flow will be restricted, and the result will be small or layered ice cubes. Remove and clean the screen if it is clogged. If dirt has gotten into the valve it may not shut off completely and will continuously drip water into the ice maker fill tube and will eventually freeze up. Low household water pressure or a restriction at the manual shut off valve will also cause the water inlet valve to not shut off completely and create this same condition. Self piercing saddle valves are the most common shut off valve to cause this problem as the hole that is pierced in the water line is often too small and will more easily become restricted.\\nHow to check the water inlet valve in a refrigerator with a multi-meter:\\nDisconnect your appliance from the power and water source before beginning.\\nRemove the rear access panel and locate your water inlet valve, it is usually found near the bottom.\\nBefore removing the inlet valve, look for any signs of leaks or loose connectors in the valve inlet supply. If no issues are found, inspect the valve body for any cracks or damage.\\nInspect the outlet tubing for any brittle tubing, abrasions, cracks, or any other damage.\\nIf you do not locate any leaks, disconnect the water inlet valve and remove it from the refrigerator to test it\\nSet your multi-meter to the Rx1 setting and touch the terminals with the probes. You are testing for continuity and should receive a reading of 200 to 500 ohms.\\nIf you receive any other reading, you need a replacement water inlet valve\"\"\"\\ntitle1_3 = \"Ice & Water Filter\"',\n",
-       "  'locals()'],\n",
-       " 'Out': {},\n",
-       " 'get_ipython': <bound method InteractiveShell.get_ipython of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x1032a1c40>>,\n",
-       " 'exit': <IPython.core.autocall.ZMQExitAutocall at 0x1032b4910>,\n",
-       " 'quit': <IPython.core.autocall.ZMQExitAutocall at 0x1032b4910>,\n",
-       " 'open': <function io.open(file, mode='r', buffering=-1, encoding=None, errors=None, newline=None, closefd=True, opener=None)>,\n",
-       " '_': '',\n",
-       " '__': '',\n",
-       " '___': '',\n",
-       " '__vsc_ipynb_file__': '/Users/kaimengzhu/projects/findParts/dataset.ipynb',\n",
-       " '_i': 'title1 = \"How To Fix A Refrigerator That\\'s Not Making Ice\"\\ntitle1_1 = \"Water Fill Tubes\"\\ncontent1_1 = \"\"\"Inspect the ice maker mold to see if there are ice cubes present. If there are no cubes or very small cubes, then you should look for issues with the water fill system.\\nHow to inspect your refrigerator’s water fill tubes:\\nBefore beginning, disconnect both the power and water source from your refrigerator.\\nAt the back of the icemaker, inspect the fill tube and the fill cup area at the back of the ice maker to make sure that they are not frozen. If there is an ice buildup in that area, confirm no foreign objects have disrupted the flow of water into the fill cup.\\nInspect the outlet tubing from the fill valve to the ice maker fill tube for any signs of restrictions.\\nIf you find any issues while performing the checks above, you will need replacement water fill tubes.\"\"\"\\ntitle1_2 = \"\"\"Water Inlet Valve\"\"\"\\ncontent1_2 = \"\"\"Some water inlet valves may have a screen to filter debris before it can enter the valve. If the screen is plugged, water flow will be restricted, and the result will be small or layered ice cubes. Remove and clean the screen if it is clogged. If dirt has gotten into the valve it may not shut off completely and will continuously drip water into the ice maker fill tube and will eventually freeze up. Low household water pressure or a restriction at the manual shut off valve will also cause the water inlet valve to not shut off completely and create this same condition. Self piercing saddle valves are the most common shut off valve to cause this problem as the hole that is pierced in the water line is often too small and will more easily become restricted.\\nHow to check the water inlet valve in a refrigerator with a multi-meter:\\nDisconnect your appliance from the power and water source before beginning.\\nRemove the rear access panel and locate your water inlet valve, it is usually found near the bottom.\\nBefore removing the inlet valve, look for any signs of leaks or loose connectors in the valve inlet supply. If no issues are found, inspect the valve body for any cracks or damage.\\nInspect the outlet tubing for any brittle tubing, abrasions, cracks, or any other damage.\\nIf you do not locate any leaks, disconnect the water inlet valve and remove it from the refrigerator to test it\\nSet your multi-meter to the Rx1 setting and touch the terminals with the probes. You are testing for continuity and should receive a reading of 200 to 500 ohms.\\nIf you receive any other reading, you need a replacement water inlet valve\"\"\"\\ntitle1_3 = \"Ice & Water Filter\"',\n",
-       " '_ii': '',\n",
-       " '_iii': '',\n",
-       " '_i1': 'title1 = \"How To Fix A Refrigerator That\\'s Not Making Ice\"\\ntitle1_1 = \"Water Fill Tubes\"\\ncontent1_1 = \"\"\"Inspect the ice maker mold to see if there are ice cubes present. If there are no cubes or very small cubes, then you should look for issues with the water fill system.\\nHow to inspect your refrigerator’s water fill tubes:\\nBefore beginning, disconnect both the power and water source from your refrigerator.\\nAt the back of the icemaker, inspect the fill tube and the fill cup area at the back of the ice maker to make sure that they are not frozen. If there is an ice buildup in that area, confirm no foreign objects have disrupted the flow of water into the fill cup.\\nInspect the outlet tubing from the fill valve to the ice maker fill tube for any signs of restrictions.\\nIf you find any issues while performing the checks above, you will need replacement water fill tubes.\"\"\"\\ntitle1_2 = \"\"\"Water Inlet Valve\"\"\"\\ncontent1_2 = \"\"\"Some water inlet valves may have a screen to filter debris before it can enter the valve. If the screen is plugged, water flow will be restricted, and the result will be small or layered ice cubes. Remove and clean the screen if it is clogged. If dirt has gotten into the valve it may not shut off completely and will continuously drip water into the ice maker fill tube and will eventually freeze up. Low household water pressure or a restriction at the manual shut off valve will also cause the water inlet valve to not shut off completely and create this same condition. Self piercing saddle valves are the most common shut off valve to cause this problem as the hole that is pierced in the water line is often too small and will more easily become restricted.\\nHow to check the water inlet valve in a refrigerator with a multi-meter:\\nDisconnect your appliance from the power and water source before beginning.\\nRemove the rear access panel and locate your water inlet valve, it is usually found near the bottom.\\nBefore removing the inlet valve, look for any signs of leaks or loose connectors in the valve inlet supply. If no issues are found, inspect the valve body for any cracks or damage.\\nInspect the outlet tubing for any brittle tubing, abrasions, cracks, or any other damage.\\nIf you do not locate any leaks, disconnect the water inlet valve and remove it from the refrigerator to test it\\nSet your multi-meter to the Rx1 setting and touch the terminals with the probes. You are testing for continuity and should receive a reading of 200 to 500 ohms.\\nIf you receive any other reading, you need a replacement water inlet valve\"\"\"\\ntitle1_3 = \"Ice & Water Filter\"',\n",
-       " 'title1': \"How To Fix A Refrigerator That's Not Making Ice\",\n",
-       " 'title1_1': 'Water Fill Tubes',\n",
-       " 'content1_1': 'Inspect the ice maker mold to see if there are ice cubes present. If there are no cubes or very small cubes, then you should look for issues with the water fill system.\\nHow to inspect your refrigerator’s water fill tubes:\\nBefore beginning, disconnect both the power and water source from your refrigerator.\\nAt the back of the icemaker, inspect the fill tube and the fill cup area at the back of the ice maker to make sure that they are not frozen. If there is an ice buildup in that area, confirm no foreign objects have disrupted the flow of water into the fill cup.\\nInspect the outlet tubing from the fill valve to the ice maker fill tube for any signs of restrictions.\\nIf you find any issues while performing the checks above, you will need replacement water fill tubes.',\n",
-       " 'title1_2': 'Water Inlet Valve',\n",
-       " 'content1_2': 'Some water inlet valves may have a screen to filter debris before it can enter the valve. If the screen is plugged, water flow will be restricted, and the result will be small or layered ice cubes. Remove and clean the screen if it is clogged. If dirt has gotten into the valve it may not shut off completely and will continuously drip water into the ice maker fill tube and will eventually freeze up. Low household water pressure or a restriction at the manual shut off valve will also cause the water inlet valve to not shut off completely and create this same condition. Self piercing saddle valves are the most common shut off valve to cause this problem as the hole that is pierced in the water line is often too small and will more easily become restricted.\\nHow to check the water inlet valve in a refrigerator with a multi-meter:\\nDisconnect your appliance from the power and water source before beginning.\\nRemove the rear access panel and locate your water inlet valve, it is usually found near the bottom.\\nBefore removing the inlet valve, look for any signs of leaks or loose connectors in the valve inlet supply. If no issues are found, inspect the valve body for any cracks or damage.\\nInspect the outlet tubing for any brittle tubing, abrasions, cracks, or any other damage.\\nIf you do not locate any leaks, disconnect the water inlet valve and remove it from the refrigerator to test it\\nSet your multi-meter to the Rx1 setting and touch the terminals with the probes. You are testing for continuity and should receive a reading of 200 to 500 ohms.\\nIf you receive any other reading, you need a replacement water inlet valve',\n",
-       " 'title1_3': 'Ice & Water Filter',\n",
-       " '_i2': 'locals()'}"
+       "33"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "locals()"
+    "len(docs)"
    ]
   }
  ],
