--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,21 +1374,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2389\n",
+      "2218\n",
+      "4088\n",
+      "2737\n",
+      "1565\n",
+      "2530\n",
+      "2397\n",
+      "2466\n",
+      "2622\n",
+      "3023\n",
+      "1971\n",
+      "1536\n",
+      "1712\n",
+      "1971\n",
+      "2132\n",
+      "2051\n",
+      "2126\n",
+      "1880\n",
+      "1366\n",
+      "3484\n",
+      "2853\n",
+      "1161\n",
+      "1542\n",
+      "2760\n",
+      "2711\n",
+      "1610\n",
+      "2715\n",
+      "4552\n",
+      "2026\n",
+      "1930\n",
+      "1973\n",
+      "2408\n",
+      "2533\n",
+      "1071\n",
+      "993\n",
+      "658\n",
+      "898\n",
+      "1204\n",
+      "1094\n",
+      "1656\n",
+      "1169\n",
+      "1156\n",
+      "839\n",
+      "1699\n",
+      "1518\n",
+      "1360\n",
+      "1490\n",
+      "1606\n",
+      "1273\n",
+      "947\n",
+      "782\n",
+      "991\n",
+      "1521\n",
+      "1170\n",
+      "1354\n",
+      "1770\n",
+      "1372\n",
+      "1473\n",
+      "1571\n",
+      "1216\n",
+      "756\n",
+      "1137\n",
+      "1074\n",
+      "898\n",
+      "556\n",
+      "524\n",
+      "1179\n",
+      "1238\n",
+      "1475\n",
+      "1542\n",
+      "1276\n",
+      "1727\n",
+      "1554\n",
+      "1090\n",
+      "1714\n",
+      "691\n",
+      "891\n",
+      "1174\n",
+      "410\n",
+      "1046\n",
+      "1545\n",
+      "1345\n",
+      "896\n",
+      "765\n",
+      "1245\n",
+      "859\n",
+      "859\n",
+      "1236\n",
+      "1253\n",
+      "1617\n",
+      "1104\n",
+      "1301\n",
+      "1551\n",
+      "1461\n",
+      "1299\n",
+      "986\n",
+      "1326\n",
+      "1234\n",
+      "863\n",
+      "1234\n",
+      "992\n",
+      "1101\n",
+      "770\n",
+      "1077\n",
+      "707\n",
+      "848\n",
+      "1367\n",
+      "1871\n",
+      "1060\n",
+      "920\n",
+      "1344\n",
+      "1111\n",
+      "715\n",
+      "1383\n",
+      "1098\n",
+      "999\n",
+      "1028\n",
+      "1090\n",
+      "1128\n",
+      "814\n",
+      "770\n",
+      "817\n",
+      "1021\n",
+      "1180\n",
+      "1266\n",
+      "1199\n",
+      "925\n",
+      "835\n"
+     ]
+    }
+   ],
    "source": [
     "docs = []\n",
     "for i in range(100,133):\n",
     "    docs.append(locals()['title'+str(i)]+':\\n'+locals()['content'+str(i)])\n",
     "\n",
     "for i in range(1,22):\n",
-    "    newDoc = locals()['title'+str(i)]\n",
-    "    j = 0\n",
+    "    j = 1\n",
     "    while ('title'+str(i)+'_'+str(j)) in locals():\n",
-    "        newDoc += '\\n' + locals()[('title'+str(i)+'_'+str(j))]\n",
-    "        newDoc += '\\n' + locals()[('content'+str(i)+'_'+str(j))]\n"
+    "        newDoc = locals()['title'+str(i)] +': '+ locals()[('title'+str(i)+'_'+str(j))]\n",
+    "        newDoc += '\\n' + locals()[('content'+str(i)+'_'+str(j))]\n",
+    "        j+=1\n",
+    "        docs.append(newDoc)\n",
+    "for d in docs:\n",
+    "    print(len(d))    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "\n",
+    "embeddings_model = OpenAIEmbeddings(openai_api_key=\"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\")\n",
+    "embeddings = embeddings_model.embed_documents(docs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1536"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1396,18 +1584,62 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "33"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "128\n",
+      "1536\n"
+     ]
     }
    ],
    "source": [
-    "len(docs)"
+    "import numpy as np\n",
+    "npEmbedding = np.array(embeddings)\n",
+    "nr, nc = npEmbedding.shape\n",
+    "print(nr)\n",
+    "print(nc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#def findDocs(input:str, docs:list, maxCharLength:int):\n",
+    "input = \"My dishwaher won't dry after cleaning the dishes, how to fix it?\"\n",
+    "inputEmbedding = embeddings_model.embed_documents([input])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(array([0.84885703]), 127), (array([0.8445852]), 105), (array([0.84397021]), 106)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dot_distances = np.dot(embeddings, np.array(inputEmbedding).transpose())\n",
+    "dot_distances = [(dot_distances[i],i) for i in range(len(dot_distances))]\n",
+    "dot_distances.sort(reverse=True)\n",
+    "print(dot_distances[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open(\"scrapData.pkl\", \"wb\") as file:\n",
+    "    pickle.dump(docs, file)"
    ]
   }
  ],
@@ -1427,7 +1659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
