--- a/scrap.ipynb
+++ b/scrap.ipynb
@@ -14,32 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: Refrigerator Door Shelf Bin WPW10321304\n",
-      "Refrigerator Door Shelf Bin Specifications\n",
-      "This manufacturer-certified Refrigerator Door Shelf Bin, also known as the crisper bin and door shelf bin, is made of clear plastic, and is easy to install. It is used to hold items in the fridge door, like jars, bottles, cans, and condiments, and this item is clear with white trim around its top edge and you'll be able to visually see if the part is broken. This particular shelf attaches to the fridge door. You can check if this model is right for your appliance by checking your user manual and model number. This individually-sold door bin fits many different models of side-by-side refrigerator, and can be installed with the use of no tools.\n",
-      "Trouble Shooting:\n",
-      "This part fixes the following symptoms:Door won’t open or close | Ice maker won’t dispense ice | Leaking\n",
-      "This part works with the following products:Refrigerator.\n",
-      "This part works with the following products:Whirlpool, Kenmore, Maytag, KitchenAid.\n",
-      "Part# WPW10321304 replaces these:AP6019471,  2171046,  2171047,  2179574,  2179575,  2179607,  2179607K,  2198449,  2198449K,  2304235,  2304235K,  W10321302,  W10321303,  W10321304,  W10549739,  WPW10321304VP\n",
-      "Repair Story From Customer:\n",
-      "Just replaced the broken one without using any tools.Other Parts Used:Refrigerator Door Shelf BinDoor Shelf\n",
-      "because one of mine got broken somehow over the years and I ordered an extra door bin because I had space for one and needed the extra room for more small jars of condiments etc.  I also ordered an extra shelf for more storage room for food dishes etc. instead oJust placed them in position on the door and on the back grid.Simple and...Read moredone !!!Read lessOther Parts Used:Refrigerator Door Shelf BinCantilever Shelf - Glass Included\n",
-      "Easy, peasey.  I popped the old one out and put the new one in.  Less than 30 seconds.\n",
-      "simply set the new bin where the old one was.\n",
-      "had my wife install them\n",
-      "just added new shelf - perfect fit\n",
-      "Dropped in\n",
-      "AwesomeOther Parts Used:Refrigerator Door Shelf BinRefrigerator Crisper Drawer with Humidity Control\n",
-      "switched new drawer for oldOther Parts Used:Refrigerator Door Shelf BinRefrigerator Crisper Drawer with Humidity Control\n",
-      "Replaced it with a new oneOther Parts Used:Refrigerator Door Shelf BinRefrigerator Crisper Drawer with Humidity Control\n"
+      "Name: Dishwasher Parts\n"
      ]
     }
    ],
@@ -88,7 +70,7 @@
     "        print('Failed to retrieve search results')\n",
     "\n",
     "# Example usage\n",
-    "search_part('PS11752778')\n",
+    "search_part('Dishwasher Wheels and Rollers')\n",
     "\n"
    ]
   },
@@ -127,21 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Lower Dishrack Wheel', 'PS3406971')]\n"
+      "[]\n"
      ]
     }
    ],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "def getSamle\n",
     "params = {\"SearchTerm\": \"PS3406971\"}\n",
     "sourcePartID = \"WDT780SAEM1\"\n",
     "url = \"https://www.partselect.com/Models/\" + sourcePartID + \"/Parts/\"\n",
@@ -166,6 +147,56 @@
     "        parts_list.append((part_name.get_text(strip=True), part_number.get_text(strip=True).split(':')[-1]))\n",
     "\n",
     "print(parts_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PS10065979\n",
+      "W10712395\n",
+      "PS11746591\n",
+      "WP8565925\n",
+      "PS3406971\n",
+      "W10195416\n",
+      "PS16542496\n",
+      "WE03X29897\n",
+      "PS11756150\n",
+      "WPW10546503\n",
+      "PS12585623\n",
+      "5304517203\n",
+      "PS16217024\n",
+      "WD12X26146\n",
+      "PS10063209\n",
+      "RPWFE\n",
+      "PS11750057\n",
+      "WPW10195417\n",
+      "PS8746144\n",
+      "MWFP\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "# Create a BeautifulSoup object\n",
+    "response = requests.get(\"https://www.partselect.com/Dishwasher-Parts.htm\")\n",
+    "\n",
+    "soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "\n",
+    "# Find the element containing the part number\n",
+    "part_number_elementList = soup.find_all(\"div\", class_=\"nf__part__detail__part-number\")\n",
+    "\n",
+    "# Extract the text inside the <strong> tag\n",
+    "for part_number_element in part_number_elementList:\n",
+    "    part_number = part_number_element.strong.text if part_number_element and part_number_element.strong else \"Part number not found\"\n",
+    "    if part_number[:2] == \"PS\":\n",
+    "        print(part_number)\n"
    ]
   },
   {
