--- a/scrap.ipynb
+++ b/scrap.ipynb
@@ -14,14 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: Dishwasher Parts\n"
+      "Name: WDT970SAHZ0  Whirlpool Dishwasher - Overview\n",
+      "Name: Ask a Question\n",
+      "Name: Your Question Has Been Submitted!\n",
+      "Repair Story From Customer:\n",
+      "Pulled dishwasher from under counter, attached link to spring, hooked spring back into frame/chassis, threaded link through pulleys, attached other end of link onto door, reinstalled dishwasher under counter. All's well. Note-I purchased an extra link anticipating that the other one will fail. They're cheap enough.Parts Used:Door Balance Link Kit\n",
+      "1. Open the dishwasher and remove the two plastic grommets about halfway down on either side of the opening. Then remove the two screws under the grommets.2. Remove the kick plate under the door. May have to lower unit by turning the feet using the adjustable wrench.3. Make sure you have enough slack in the water i...Read morenput line and electrical wiring that you can pull the dishwasher out about  12 inches or more.4. There is a spring and nylon rope link on both sides of the unit. Probably just one link is broken, but the replacement comes with two, so you can replace both or save one as a spare. Look at the good side and it should be pretty self explanatory how it attaches. I found it easiest to first thread the link around the lower pulley, then attach the link to the spring, then spring to the rear support, then the link to the door.5. Reverse (2 to 1) to reinstall the dishwasher.Read lessParts Used:Door Balance Link Kit\n",
+      "This was the second time I had this problem so I knew the symptoms and remedy.  The tools needed were two nut drivers a ¼” and 5/16” along with a flat pry bar and Phillips screw driver.  I started by removing the lower front panel by removing the two ¼” screws on either side.  The lower panel will lift up and then can be removed by pullin...Read moreg on the bottom.  There is a flat sheet metal piece behind the front panel with insulation that can be removed very easily along with the front panel.  When the front panel is removed it exposes the front legs that may need to be dropped to let you lift the dishwasher over the tile (if you have ceramic tiles).  The next step would be to remove any ties to the counter top if it is attached.  Mine were attached by the two straps on either side with Phillips screws.  After the top is free, lower the front legs by lifting the dishwasher with the flat pry bar and threading the legs up into their holders.  With the legs lifted the dishwasher can be pulled out to expose the tension springs located along the sides at the very bottom.  Chances are the ropes are broken off the plastic holders that fit over the door hooks.Remove the plastic guides by removing the 5/16” nut from the middle of the lower roller.  Remember to note which hole the screw is coming from this also sets the tension for how fast or slowly the door drops.  Placing the nut closer to the front will drop the door slowly and toward the back will drop the door more quickly.  I placed mine in the middle hole.  When the plastic guides are removed attach the nylon pope to the spring and attach to the back of the dishwasher.  There is a hole located on a flat piece of sheet metal the spring will attach to at the back of the dishwasher (if it is broken).  Check the other side if it is still in tact.  With the spring in place weave the rope around the plastic guides then pull the springs to help get the plastic end over the door hook located at the bottom of the door.  Repeat this operation for the other side (kit has a both sides covered) and reinstall dishwasher in cabinet.Steps1)\tRemove front panel (1/4” nut)2)\tRelease Dishwasher from Cabinet3)\tLower front legs4)\tPull Dishwasher out from under Cabinet5)\tRemove Rope Guide (5/16” nut)6)\tInstall new Rope Guide (Supplied in Kit)7)\tAttach new rope to Spring and attach spring to dishwasher8)\tWeave rope through rope guide9)\tWith door closed pull spring to relieve tension so rope can be attached to door10)\tRepeat for other side (Kit has both sides)Read lessParts Used:Door Balance Link Kit\n"
      ]
     }
    ],
@@ -70,7 +76,7 @@
     "        print('Failed to retrieve search results')\n",
     "\n",
     "# Example usage\n",
-    "search_part('Dishwasher Wheels and Rollers')\n",
+    "search_part('WDT970SAHZ0')\n",
     "\n"
    ]
   },
@@ -109,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -126,8 +132,9 @@
     "params = {\"SearchTerm\": \"PS3406971\"}\n",
     "sourcePartID = \"WDT780SAEM1\"\n",
     "url = \"https://www.partselect.com/Models/\" + sourcePartID + \"/Parts/\"\n",
-    "response = requests.get(url, params)\n",
-    "\n",
+    "url = 'https://www.partselect.com/api/search/'\n",
+    "params = {'searchterm': \"WDT970SAHZ0\"}\n",
+    "response = requests.get(url, params=params)\n",
     "# Parse the HTML content\n",
     "soup = BeautifulSoup(response.content, 'html.parser')\n",
     "\n",
@@ -151,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -159,30 +166,21 @@
      "output_type": "stream",
      "text": [
       "PS10065979\n",
-      "W10712395\n",
       "PS11746591\n",
-      "WP8565925\n",
       "PS3406971\n",
-      "W10195416\n",
       "PS16542496\n",
-      "WE03X29897\n",
       "PS11756150\n",
-      "WPW10546503\n",
       "PS12585623\n",
-      "5304517203\n",
       "PS16217024\n",
-      "WD12X26146\n",
       "PS10063209\n",
-      "RPWFE\n",
       "PS11750057\n",
-      "WPW10195417\n",
-      "PS8746144\n",
-      "MWFP\n"
+      "PS8746144\n"
      ]
     }
    ],
    "source": [
     "from bs4 import BeautifulSoup\n",
+    "#find parts number give description\n",
     "\n",
     "# Create a BeautifulSoup object\n",
     "response = requests.get(\"https://www.partselect.com/Dishwasher-Parts.htm\")\n",
@@ -201,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,47 +359,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Refrigerator Repair- Replacing the Cantilever Bin (Whirlpool Part # W10321304)'"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "getVideoTitle(\"zSCNN6KpDE8\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Title: Refrigerator Repair- Replacing the Cantilever Bin (Whirlpool Part # W10321304)\n",
-      "Transcript:\n",
-      " Hi, it’s Steve from PartSelect. Today we’re going to show you how to change\n",
-      "the cantilever bin on your refrigerator. Really easy job, no tools required. Let me show you how we do it. To change the cantilever bin we simply need\n",
-      "to open the door, lift up on the old bin, remove it: you can save that for putting car\n",
-      "parts and stuff like that in your garage. We’ll take our new one, line it up, and\n",
-      "drop it into place. Simple as that and our repair is complete. We told you it was an easy job. Thanks for watching, and good luck with your\n",
-      "repair. \n"
+      "[('Lower Dishrack Wheel', 'PS3406971'), ('Upper Rack Adjuster Kit - White Wheels, Left and Right Sides', 'PS10065979'), ('Rack Track Stop', 'PS11746591'), ('Door Balance Link Kit', 'PS972325'), ('Mounting Bracket', 'PS11745496'), ('Tine Pivot', 'PS11748190'), ('Dishwasher Positioner', 'PS11750093'), ('Dishwasher Dishrack Adjuster', 'PS11750092'), ('Dishwasher Door Seal', 'PS12348515'), ('Retainer Clip - Black', 'PS11755736'), ('Hose Clamp', 'PS11743008'), ('Dishwasher Filter', 'PS11759673')]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
