--- a/scrap.ipynb
+++ b/scrap.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
     "        print('Failed to retrieve search results')\n",
     "\n",
     "# Example usage\n",
-    "search_part('WDT970SAHZ0')\n",
+    "search_part('PS3406971')\n",
     "\n"
    ]
   },
@@ -115,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[('Lower Dishrack Wheel', 'PS3406971'), ('Upper Rack Adjuster Kit - White Wheels, Left and Right Sides', 'PS10065979'), ('Rack Track Stop', 'PS11746591'), ('Door Balance Link Kit', 'PS972325'), ('Mounting Bracket', 'PS11745496'), ('Tine Pivot', 'PS11748190'), ('Dishwasher Positioner', 'PS11750093'), ('Dishwasher Dishrack Adjuster', 'PS11750092'), ('Dishwasher Door Seal', 'PS12348515'), ('Retainer Clip - Black', 'PS11755736'), ('Hose Clamp', 'PS11743008'), ('Dishwasher Filter', 'PS11759673')]\n"
      ]
     }
    ],
